[package]
name = "callgraph"
version = "0.1.0"
edition = "2024"

[lib]
name = "callgraph"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.25.1", features = ["extension-module"], optional = true }
clap = { version = "4.0", features = ["derive"] }
ruff_python_parser = { git = "https://github.com/astral-sh/ruff.git", tag = "v0.4.10" }
ruff_python_ast = { git = "https://github.com/astral-sh/ruff.git", tag = "v0.4.10" }
ruff_text_size = { git = "https://github.com/astral-sh/ruff.git", tag = "v0.4.10" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
walkdir = "2.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11.8"

[features]
default = ["python"]
python = ["pyo3"]
