[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "callgraph"
description = "Static analysis tool for generating call graphs from Python and YAML files"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Call Graph Team"}
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[project.optional-dependencies]
visualization = [
    "networkx>=2.5",
    "matplotlib>=3.0",
]
dev = [
    "maturin>=1.9.3",
    "pydot>=4.0.1",
    "scipy>=1.10.1",
    "networkx>=2.5",
    "matplotlib>=3.0",
]

[tool.maturin]
features = ["python"]
